Fix binary names

--- a/targets/Mercury_AA1/Mercury_ST1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_ST1/MMC/build.ini
@@ -22,16 +22,16 @@ boot = socfpga_enclustra_mercury_aa1_mmc_boot.dtsi
 rootfs.tar = output/images/rootfs.tar
 
 [boot_files_ME-AA1-480-2I3-D12E-NFX3-copyfiles]
-bitstream.periph.rbf = sdmmc/Mercury_AA1_ST1.periph.rbf
-bitstream.core.rbf = sdmmc/Mercury_AA1_ST1.core.rbf
+bitstream.periph.rbf = sdmmc/Mercury_AA1_PE1.periph.rbf
+bitstream.core.rbf = sdmmc/Mercury_AA1_PE1.core.rbf
 handoff = sdmmc/hps_isw_handoff
 
 [boot_files_ME-AA1-270-2I2-D11E-NFX3-copyfiles]
-bitstream.periph.rbf = sdmmc/Mercury_AA1_ST1.periph.rbf
-bitstream.core.rbf = sdmmc/Mercury_AA1_ST1.core.rbf
+bitstream.periph.rbf = sdmmc/Mercury_AA1_PE1.periph.rbf
+bitstream.core.rbf = sdmmc/Mercury_AA1_PE1.core.rbf
 handoff = sdmmc/hps_isw_handoff
 
 [boot_files_ME-AA1-270-3E4-D11E-NFX3-copyfiles]
-bitstream.periph.rbf = sdmmc/Mercury_AA1_ST1.periph.rbf
-bitstream.core.rbf = sdmmc/Mercury_AA1_ST1.core.rbf
+bitstream.periph.rbf = sdmmc/Mercury_AA1_PE1.periph.rbf
+bitstream.core.rbf = sdmmc/Mercury_AA1_PE1.core.rbf
 handoff = sdmmc/hps_isw_handoff
