--- a/targets/Mercury_SA1/Mercury_ST1/EMMC/build.ini
+++ b/targets/Mercury_SA1/Mercury_ST1/EMMC/build.ini
@@ -17,5 +17,5 @@ u-boot-with-spl.sfp=u-boot-with-spl.sfp
 rootfs.tar = output/images/rootfs.tar
 
 [boot_files_ME-SA1-C6-7I-D10-copyfiles]
-fpga.rbf = emmc/Mercury_SA1_ST1.rbf
+fpga.rbf = emmc/Mercury_SA1_PE1.rbf
 handoff = emmc/hps_isw_handoff/Mercury_SA1_pd_hps_0
