--- a/targets/Mercury_SA2/Mercury_ST1/QSPI/build.ini
+++ b/targets/Mercury_SA2/Mercury_ST1/QSPI/build.ini
@@ -18,5 +18,5 @@ u-boot.img = u-boot.img
 uramdisk = output/images/rootfs.cpio.uboot
 
 [boot_files_ME-SA2-D6-7I-D11-copyfiles]
-fpga.rbf = qspi/Mercury_SA2_ST1.rbf
+fpga.rbf = qspi/Mercury_SA2_PE1.rbf
 handoff = qspi/hps_isw_handoff/Mercury_SA2_pd_hps_0
