Change binary download paths to the v1.0.0 reference design release on Github

--- a/targets/Mercury_AA1/Mercury_PE3/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE3/build.ini
@@ -6,3 +6,18 @@ boot_files_ME-AA1-480-2I3-D12E-NFX3 = true
 boot_files_ME-AA1-270-2I2-D11E-NFX3 = false
 boot_files_ME-AA1-270-3E4-D11E-NFX3 = false
 
+[boot_files_ME-AA1-480-2I3-D12E-NFX3]
+unpack = true
+url = https://github.com/enclustra/Mercury_AA1_PE3_Reference_Design/releases/download/2022.1_v1.0.0/binaries_ME-AA1-480-2I3-D12E-NFX3_PE3.zip
+description = ME-AA1-480-2I3-D12E-NFX3
+
+[boot_files_ME-AA1-270-2I2-D11E-NFX3]
+unpack = true
+url = https://github.com/enclustra/Mercury_AA1_PE3_Reference_Design/releases/download/2022.1_v1.0.0/binaries_ME-AA1-270-2I2-D11E-NFX3_PE3.zip
+description = ME-AA1-270-2I2-D11E-NFX3
+
+[boot_files_ME-AA1-270-3E4-D11E-NFX3]
+unpack = true
+url = https://github.com/enclustra/Mercury_AA1_PE3_Reference_Design/releases/download/2022.1_v1.0.0/binaries_ME-AA1-270-3E4-D11E-NFX3_PE3.zip
+description = ME-AA1-270-3E4-D11E-NFX3
+
