--- a/targets/Mercury_SA2/Mercury_PE1/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/build.ini
@@ -4,3 +4,8 @@ baseboard = socfpga_enclustra_mercury_pe1.dtsi
 [binaries]
 boot_files_ME-SA2-D6-7I-D11 = true
 
+[boot_files_ME-SA2-D6-7I-D11]
+unpack = true
+url = https://github.com/enclustra/Mercury_SA2_PE1_Reference_Design/releases/download/2022.1_v1.0.0/binaries_ME-SA2-D6-7I-D11_PE1.zip
+description = ME-SA2-D6-7I-D11
+
