--- a/targets/Mercury_SA1/Mercury_PE1/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/build.ini
@@ -4,3 +4,8 @@ baseboard = socfpga_enclustra_mercury_pe1.dtsi
 [binaries]
 boot_files_ME-SA1-C6-7I-D10 = true
 
+[boot_files_ME-SA1-C6-7I-D10]
+unpack = true
+url = https://github.com/enclustra/Mercury_SA1_PE1_Reference_Design/releases/download/2022.1_v1.0.0/binaries_ME-SA1-C6-7I-D10_PE1.zip
+description = ME-SA1-C6-7I-D10
+
