--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -47,3 +47,18 @@ module = ME-AA1-270-3E4-D11E-NFX3.dtsi
 [boot_files_ME-AA1-270-3E4-D11E-NFX3-U-Boot-device-tree]
 module = ME-AA1-270-3E4-D11E-NFX3.dtsi
 
+[boot_files_ME-AA1-480-2I3-D12E-NFX3]
+unpack = true
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/ME-AA1-480-2I3-D12E-NFX3_PE1.zip
+description = ME-AA1-480-2I3-D12E-NFX3
+
+[boot_files_ME-AA1-270-2I2-D11E-NFX3]
+unpack = true
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/ME-AA1-270-2I2-D11E-NFX3_PE1.zip
+description = ME-AA1-270-2I2-D11E-NFX3
+
+[boot_files_ME-AA1-270-3E4-D11E-NFX3]
+unpack = true
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/ME-AA1-270-3E4-D11E-NFX3_PE1.zip
+description = ME-AA1-270-3E4-D11E-NFX3
+
