--- a/targets/Mercury_SA1/build.ini
+++ b/targets/Mercury_SA1/build.ini
@@ -24,3 +24,8 @@ module = ME-SA1-C6-7I-D10.dtsi
 [boot_files_ME-SA1-C6-7I-D10-U-Boot-device-tree]
 module = ME-SA1-C6-7I-D10.dtsi
 
+[boot_files_ME-SA1-C6-7I-D10]
+unpack = true
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/ME-SA1-C6-7I-D10_PE1.zip
+description = ME-SA1-C6-7I-D10
+
