--- a/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
@@ -8,9 +8,10 @@ boot = socfpga_enclustra_mercury_aa1_mmc_boot.dtsi
 bsp-generator = arch/arm/mach-socfpga/qts-filter-a10.sh ${OUTDIR}/handoff/hps.xml arch/arm/dts/socfpga_arria10_handoff.h
 generate_defconfig = cat configs/socfpga_enclustra_mercury_aa1_defconfig configs/socfpga_env_on_mmc.appendix > configs/enclustra_ebe_generated_defconfig
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d board/enclustra/bootscripts/sd-aa1.cmd boot.scr
+bitstream = cp board/enclustra/mercury_aa1/bitstream.its ${OUTDIR} && cd ${OUTDIR} && mkimage -E -f bitstream.its bitstream.itb
 
 [U-Boot-options]
-build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
+build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript,bitstream
 
 [U-Boot-copyfiles]
 boot.scr = boot.scr
