Use u-boot-with-spl.sfp for Cyclone V QSPI boot / Update QSPI flash deployment section in documentation

--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -13,6 +13,7 @@ soc = socfpga_arria10.dtsi
 common = socfpga_enclustra_mercury_aa1.dtsi
 
 [U-Boot-copyfiles]
+boot.scr = boot.scr
 u-boot.img = u-boot-dtb.img
 u-boot-splx4.sfp = spl/u-boot-splx4.sfp
 
@@ -42,4 +43,3 @@ module = ME-AA1-270-3E4-D11E-NFX3.dtsi
 
 [boot_files_ME-AA1-270-3E4-D11E-NFX3-U-Boot-device-tree]
 module = ME-AA1-270-3E4-D11E-NFX3.dtsi
-
