--- a/targets/Mercury_SA2/build.ini
+++ b/targets/Mercury_SA2/build.ini
@@ -12,6 +12,10 @@ path = arch/arm/boot/dts
 soc = socfpga_cyclone5.dtsi
 common = socfpga_enclustra_mercury_sa2.dtsi
 
+[U-Boot-copyfiles]
+boot.scr = boot.scr
+u-boot-with-spl.sfp=u-boot-with-spl.sfp
+
 [U-Boot-device-tree]
 path = arch/arm/dts
 soc = socfpga_cyclone5.dtsi
@@ -23,4 +27,3 @@ module = ME-SA2-D6-7I-D11.dtsi
 
 [boot_files_ME-SA2-D6-7I-D11-U-Boot-device-tree]
 module = ME-SA2-D6-7I-D11.dtsi
-
