Fix bitstream names for SA1 and SA2

--- a/targets/Mercury_SA1/Mercury_ST1/QSPI/build.ini
+++ b/targets/Mercury_SA1/Mercury_ST1/QSPI/build.ini
@@ -13,5 +13,5 @@ build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 uramdisk = output/images/rootfs.cpio.uboot
 
 [boot_files_ME-SA1-C6-7I-D10-copyfiles]
-fpga.rbf = qspi/Mercury_SA1_PE1.rbf
+fpga.rbf = qspi/Mercury_SA1_ST1.rbf
 handoff = qspi/hps_isw_handoff/Mercury_SA1_pd_hps_0
