Enable I2C bus connected to FPGA pins

--- a/targets/Mercury_AA1/Mercury_ST1/build.ini
+++ b/targets/Mercury_AA1/Mercury_ST1/build.ini
@@ -1,6 +1,9 @@
 [Linux-device-tree]
 baseboard = socfpga_enclustra_mercury_st1.dtsi
 
+[U-Boot-device-tree]
+baseboard = socfpga_enclustra_mercury_st1.dtsi
+
 [binaries]
 boot_files_ME-AA1-480-2I3-D12E-NFX3 = true
 boot_files_ME-AA1-270-2I2-D11E-NFX3 = false
