--- a/targets/Mercury_SA2/Mercury_PE1/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/build.ini
@@ -1,6 +1,9 @@
 [Linux-device-tree]
 baseboard = socfpga_enclustra_mercury_pe1.dtsi
 
+[U-Boot-device-tree]
+baseboard = socfpga_enclustra_mercury_pe1.dtsi
+
 [binaries]
 boot_files_ME-SA2-D6-7I-D11 = true
 
