--- a/targets/Mercury_SA1/Mercury_ST1/build.ini
+++ b/targets/Mercury_SA1/Mercury_ST1/build.ini
@@ -1,6 +1,9 @@
 [Linux-device-tree]
 baseboard = socfpga_enclustra_mercury_st1.dtsi
 
+[U-Boot-device-tree]
+baseboard = socfpga_enclustra_mercury_st1.dtsi
+
 [binaries]
 boot_files_ME-SA1-C6-7I-D10 = true
 
